--- a/Mailer/composer.json
+++ b/Mailer/composer.json
@@ -6,7 +6,8 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "repositories": [
