--- a/Campaign/package.json
+++ b/Campaign/package.json
@@ -19,7 +19,8 @@
         "development": ""
     },
     "engines": {
-        "node": ">=12"
+        "node": ">=16",
+        "npm": ">=8"
     },
     "dependencies": {
         "@babel/core": "^7.0.0-0",
