Update Docker Compose configuration to handle user rights
The original configuration always worked as root for
in-container executions. This caused access rights issues,
mainly for the contents shared with the host machine.

- Docker Compose now defaults to user 1000:1000 (docker).
- User can configure $UID, $GID and $UNAME environment variables
to override this setting (recommended). README was updated
with the steps to follow.
- PHP Docker image doesn't use Dockerize anymore in favor
of Docker Compose's healthcheck feature.

remp/remp#2091

--- a/Docker/php/Dockerfile
+++ b/Docker/php/Dockerfile
@@ -1,5 +1,19 @@
 FROM php:8.1.14-fpm
 
+# ADD NON-ROOT USER; IF THE VARIABLES ARE NOT SET, DOCKER COMPOSE DEFAULTS TO 1000:1000 "docker"
+
+ARG UID
+ARG GID
+ARG UNAME
+
+RUN groupadd -g ${GID} -o ${UNAME}
+
+RUN usermod -a -G ${UNAME} www-data
+
+RUN useradd -m -u ${UID} -g ${GID} -o -s /bin/bash ${UNAME}
+
+# INSTALL DEPENDENCIES
+
 ENV BUILD_DEPS g++ build-essential libsasl2-dev libssl-dev
 
 ENV RUN_DEPS libzip-dev libicu-dev git wget vim curl less gnupg zlib1g-dev libpng-dev libjpeg-dev libonig-dev
@@ -48,6 +62,8 @@ RUN apt-get install -y nodejs
 
 RUN npm install --global yarn
 
+RUN mkdir -p ${YARN_CACHE_FOLDER} && chmod -R 777 ${YARN_CACHE_FOLDER}
+
 # VOLUME
 
 VOLUME /var/www/html
@@ -58,10 +74,6 @@ ADD remp.sh /usr/local/bin/remp.sh
 
 RUN chmod +x /usr/local/bin/remp.sh
 
-ENV DOCKERIZE_VERSION v0.6.1
+# RUN
 
-RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-
-CMD ["dockerize", "-timeout", "1m", "-wait-retry-interval", "10s", "-wait", "tcp://mysql:3306", "-wait", "tcp://redis:6379", "/root/remp.sh"]
+CMD /usr/local/bin/remp.sh
