--- a/Mailer/composer.json
+++ b/Mailer/composer.json
@@ -28,6 +28,7 @@
     ],
 
     "require": {
+        "php": "^8.1",
         "remp/mailer-module": "@dev",
         "remp/mailer-newrelic-module": "@dev"
     },
