Disable subscribe tracking in Mailer module
The tracking is dependent on the Beam Tracker configuration
and that is not present by default. Clean installation of
Mailer would crash because of the missing dependency.

Enabling the tracker is now up to each Mailer installation.

The hint to enable them is now moved to the Mailer Skeleton
repository - config.local.neon.example.

(cherry picked from commit 8e1b0cf293a7ae9ce0334d2d7584792733ec305e)

--- a/Mailer/app/config/config.neon
+++ b/Mailer/app/config/config.neon
@@ -25,3 +25,9 @@ services:
 
 	embedParser:
 		factory: Remp\Mailer\Models\Generators\EmbedParser
+
+	hermesWorker:
+		setup:
+#			- add('mail-sent', Remp\MailerModule\Hermes\MailSentHandler())
+			- add('user-subscribed', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
+			- add('user-unsubscribed', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
