Update dependencies to make Node.js 18 working
- Update @babel/core to the latest version.
- Update webpack to the latest version.
- Update outdated moment
- Update outdated sass
- Update outdated vue-template-compiler
- Update outdated animate.css
- Update outdated postcss
- Update outdated datatables libraries
- Remove vuetify (it was only there to make nice tooltip).
- Remove acorn (wasn't used anywhere)

remp/remp#2091

--- a/Mailer/package.json
+++ b/Mailer/package.json
@@ -14,17 +14,17 @@
     "production": "cross-env MAILER_MODULE_PATH=extensions/mailer-module mix --production --mix-config=extensions/mailer-module/webpack.mix.js"
   },
   "engines": {
-    "node": ">=16",
-    "npm": ">=8"
+    "node": ">=18",
+    "npm": ">=9"
   },
   "dependencies": {
     "mailer-module": "file:extensions/mailer-module"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "^7.0",
     "cross-env": "^7.0",
     "css-loader": "^5.2.6",
-    "laravel-mix": "<=6.0.43",
+    "laravel-mix": "^6.0",
     "postcss": "^8.2.8",
     "resolve-url-loader": "^3.1",
     "sass": "^1.17.4",
