--- a/Campaign/package.json
+++ b/Campaign/package.json
@@ -19,13 +19,12 @@
         "development": ""
     },
     "engines": {
-        "node": ">=16",
-        "npm": ">=8"
+        "node": ">=18",
+        "npm": ">=9"
     },
     "dependencies": {
-        "@babel/core": "^7.0.0-0",
+        "@babel/core": "^7.0",
         "@remp/js-commons": "^1.3",
-        "acorn": "^7.4.0",
         "animate.css": "^3.7.0",
         "autosize": "^4.0.2",
         "bootstrap": "^3.4.1",
@@ -54,24 +53,25 @@
         "optimal-select": "^4.0.1",
         "rison": "^0.1.1",
         "salvattore": "^1.0.9",
-        "vue": "^2.6.10",
+        "vue": "^2.7",
         "vue-codemirror": "4.0.6",
         "vue-slide-up-down": "^1.7.2",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.7"
     },
     "devDependencies": {
         "axios": "^0.21.1",
         "cross-env": "^7.0",
-        "css-loader": "*",
+        "css-loader": "^6.0",
         "laravel-mix": "^6.0.12",
         "less": "^4.1.3",
-        "less-loader": "^9.1.0",
+        "less-loader": "^11.1.0",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.2.8",
-        "resolve-url-loader": "^3.1",
-        "sass": "^1.32",
-        "sass-loader": "^10.0",
-        "vue-loader": "^15.9.5",
-        "webpack": "^5.0.0"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.59.2",
+        "sass-loader": "^13.0",
+        "vue-loader": "^15.9.8",
+        "webpack": "^5.0.0",
+        "webpack-cli": "^5.0.1"
     }
 }
