--- a/Sso/package.json
+++ b/Sso/package.json
@@ -20,8 +20,8 @@
         "bootstrap": "^3.4.1",
         "bootstrap-notify": "^3.1.3",
         "bootstrap-select": "^1.13.18",
-        "datatables.net": "^1.10.25",
-        "datatables.net-responsive": "^2.2.9",
+        "datatables.net": "1.10.25",
+        "datatables.net-responsive": "2.2.9",
         "datatables.net-rowgroup": "^1.1.3",
         "global": "^4.4.0",
         "google-material-color": "^1.3.1",
