Add an optimizations for dashboard view to reduce obsolete database calls and speed up the filtering by property.
Add optional `env` configurations `ARTICLE_TRAFFIC_GRAPH_SHOW_INTERVAL_7D` and `ARTICLE_TRAFFIC_GRAPH_SHOW_INTERVAL_30D` to disable possibility of choosing
longer time intervals in the article histogram.

remp/remp#1251

--- a/Beam/.env.example
+++ b/Beam/.env.example
@@ -173,6 +173,11 @@ DASHBOARD_PASSWORD2=
 ## Valid options: "snapshots", "journal" or "pageviews" (default)
 # ARTICLE_TRAFFIC_GRAPH_DATA_SOURCE=
 
+## Flag whether the longer intervals of article traffic graph can be showed
+# Valid options: true(default)/false
+# ARTICLE_TRAFFIC_GRAPH_SHOW_INTERVAL_7D=
+# ARTICLE_TRAFFIC_GRAPH_SHOW_INTERVAL_30D=
+
 #####################
 ## Airbrake / Errbit
 
