Add clicked links tracking in sent emails
- **BREAKING**: Add `context` parameter to `IReplace::replace()` interface 
method.

  - Use context to pass additional information to replacers.

  - If you have own implementation of `IReplace` interface, you should 
add new `context` parameter to `replace` method.

- Add `RtmClickReplace` to add `rtm_click` query parameter with computed 
link hash to email links. Hash is then used to identify clicked link in email.
    
  - Add table with link clicks count to `/template/show` page.

  - You can enable/disable email link clicks tracking in Settings 
with Mail click tracker toggle.

  - Do not forget to seed your database with new config 
(Run `make install` after every update).

- Add `url` parameter with clicked URL to `mailgun-event` Hermes 
event in `v2/MailgunEventsHandler`.

remp/remp#1102

--- a/Mailer/app/config/config.test.neon
+++ b/Mailer/app/config/config.test.neon
@@ -33,3 +33,10 @@ services:
 			- addDomain('expresso.pt')
 
 	- Tests\Unit\NullTracker
+
+	config:
+		setup:
+			- allowLocalConfigFallback(true)
+
+local_configs:
+	mail_click_tracker: true
