--- a/Beam/Makefile
+++ b/Beam/Makefile
@@ -27,8 +27,7 @@ vet: vet-lib
 	@cd $(SUB_SEGMENTS) && make vet
 
 js-link-remp:
-	cd ../Package/remp && yarn link
-	yarn link "@remp/js-commons"
+	yarn link "../Package/remp" --relative
 
 js:
 	make js-link-remp
