--- a/Campaign/Makefile
+++ b/Campaign/Makefile
@@ -3,8 +3,7 @@
 PHP_FOLDERS=app config
 
 js-link-remp:
-	cd ../Package/remp && yarn link
-	yarn link "@remp/js-commons"
+	yarn link "../Package/remp" --relative
 
 js:
 	make js-link-remp
