--- a/Mailer/.gitignore
+++ b/Mailer/.gitignore
@@ -8,3 +8,10 @@ www/assets/
 node_modules
 yarn-error.log
 mix-manifest.json
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
