--- a/Mailer/package.json
+++ b/Mailer/package.json
@@ -15,7 +15,8 @@
   },
   "engines": {
     "node": ">=18",
-    "npm": ">=9"
+    "npm": ">=9",
+    "yarn": ">=2"
   },
   "dependencies": {
     "mailer-module": "file:extensions/mailer-module"
@@ -32,5 +33,8 @@
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.0.0"
+  },
+  "resolutions": {
+    "@remp/js-commons": "portal:../Package/remp"
   }
 }
