--- a/Sso/package.json
+++ b/Sso/package.json
@@ -11,7 +11,8 @@
     },
     "engines": {
         "node": ">=18",
-        "npm": ">=9"
+        "npm": ">=9",
+        "yarn": ">=2"
     },
     "dependencies": {
         "@remp/js-commons": "^1.3",
@@ -44,5 +45,8 @@
         "sass-loader": "^13.0",
         "vue-template-compiler": "^2.6.10",
         "webpack": "^5.0.0"
+    },
+    "resolutions": {
+        "@remp/js-commons": "portal:../Package/remp"
     }
 }
