Fix build process of Go applications
We use older Goa v1 to define and generate Go APIs. Goa v1
has a dependency for github.com/armon/go-metrics. The library
was renamed recently and go modules used to resolve
the dependencies now won't allow installation of the library,
because Goa requests "armon" library, but Go finds "hashicorp"
library.

We ended up forking the library to github.com/rootpd/goa and
adding "replace" statement to go.mod file which handles the
transition.

https://github.com/rootpd/goa/blob/v1/go.mod#L5

Unfortunately once go.mod contains replace statement, go modules
won't allow using go install to install the package. Because of
that, we needed to replace go install with more raw git checkout
and local build of goagen.

Once we are on the latest version of Goa, we should revert the
process back to the go install.

remp/remp#1275

--- a/Beam/go/cmd/segments/Makefile
+++ b/Beam/go/cmd/segments/Makefile
@@ -23,7 +23,8 @@ clean:
 
 gen:
 	set -e
-	go install github.com/goadesign/goa/...@v1
+	# revert following back to go install github.com/goadesign/goa/...@v3 once we use the latest goa
+	command -v goagen || (git clone https://github.com/rootpd/goa.git && cd goa && git checkout v1 && make goagen)
 	goagen app -d=$(DESIGN_PKG)
 	goagen swagger -d=$(DESIGN_PKG)
 
