Fix symlinked packages from Composer folder.
remp/remp#565

--- a/Beam/composer.json
+++ b/Beam/composer.json
@@ -14,7 +14,7 @@
             "type": "path",
             "url": "../Composer/*",
             "options": {
-                "symlink": true
+                "symlink": false
             }
         },
         {
