Add hermes handler to notify CRM about refreshing user's data. You can enable the feature in `config.local.neon` (see example file for reference).
remp/web#2061

--- a/Mailer/app/config/config.neon
+++ b/Mailer/app/config/config.neon
@@ -30,4 +30,6 @@ services:
 		setup:
 #			- add('mail-sent', Remp\MailerModule\Hermes\MailSentHandler())
 			- add('user-subscribed', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
+			- add('user-subscribed', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
 			- add('user-unsubscribed', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
+			- add('user-unsubscribed', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
