Fix duplicate configuration.
remp/web#2061

--- a/Mailer/app/config/config.local.neon.example
+++ b/Mailer/app/config/config.local.neon.example
@@ -6,7 +6,7 @@ extensions:
 
 #parameters:
 #	crm:
-#		addr: @environmentConfig::get('CRM_ADDR')
+#		addr: @environmentConfig::get('CRM_API_ADDR')
 #		api_token: @environmentConfig::get('CRM_API_TOKEN')
 
 services:
