Add new emit of `user-subscribed-variant` and `user-unsubscribed-variant` hermes  event when user subscribe or unsubscribes from the mail type variant.
remp/web#2061

--- a/Mailer/app/config/config.neon
+++ b/Mailer/app/config/config.neon
@@ -33,3 +33,5 @@ services:
 			- add('user-subscribed', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
 			- add('user-unsubscribed', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
 			- add('user-unsubscribed', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
+			- add('user-subscribed-variant', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
+			- add('user-unsubscribed-variant', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
