Added `mail:unsubscribe-inactive-users` command to mailer module
remp/remp#1277

--- a/Mailer/app/config/config.test.neon
+++ b/Mailer/app/config/config.test.neon
@@ -35,7 +35,10 @@ services:
 		setup:
 			- addDomain('expresso.pt')
 
+	- Remp\MailerModule\Commands\UnsubscribeInactiveUsersCommand
+
 	- Tests\Unit\NullTracker
+	- Tests\Feature\TestSegmentProvider
 
 	config:
 		setup:
