Improvements in Docker Compose
- Removed dockerize from Dockerfiles across the project.
It's been replaced by native Docker Compose healthcheck feature.

- Added Elasticsearch and Telegraf configs directly to their
respective Docker images, so there's a default config if one is not
provided via volume. This was necessary to be able to build
out-of-the-box-working skeleton images, as skeleton doesn't have
a way to get these configs.

--- a/Beam/go/cmd/tracker/Dockerfile
+++ b/Beam/go/cmd/tracker/Dockerfile
@@ -8,10 +8,4 @@ ADD .env.example .env
 
 RUN apk add --no-cache openssl
 
-ENV DOCKERIZE_VERSION v0.6.1
-
-RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-
-CMD ["dockerize", "-timeout", "1m", "-wait-retry-interval", "10s", "-wait", "tcp://zookeeper:2181", "-wait", "tcp://mysql:3306", "tracker"]
+CMD tracker
