--- a/Docker/elasticsearch/Dockerfile
+++ b/Docker/elasticsearch/Dockerfile
@@ -6,4 +6,6 @@ RUN chmod +x create-indexes.sh
 ADD elastic-start.sh .
 RUN chmod +x elastic-start.sh
 
+ADD elasticsearch.yml /usr/share/elasticsearch/config/elasticsearch.yml
+
 CMD ["./elastic-start.sh"]
