--- a/Beam/go/cmd/segments/Dockerfile
+++ b/Beam/go/cmd/segments/Dockerfile
@@ -10,10 +10,4 @@ RUN apk add --no-cache openssl
 
 RUN apk add --no-cache tzdata
 
-ENV DOCKERIZE_VERSION v0.6.1
-
-RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-
-CMD ["dockerize", "-timeout", "1m", "-wait-retry-interval", "10s", "-wait", "tcp://elasticsearch:9200", "-wait", "tcp://mysql:3306", "segments"]
+CMD segments
