Add install job to the SSO Makefile

--- a/Sso/Makefile
+++ b/Sso/Makefile
@@ -2,6 +2,9 @@
 
 PHP_FOLDERS=app config
 
+install: composer-install js
+	php artisan migrate
+
 js-link-remp:
 	yarn link "../Package/remp" --relative
 
