Remove HermesException "mail_sender_id is missing" from `ValidateCrmEmailHandler`

--- a/Mailer/app/config/config.local.neon.example
+++ b/Mailer/app/config/config.local.neon.example
@@ -55,6 +55,7 @@ services:
             #- add('user-unsubscribed', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
             #- add('user-subscribed-variant', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
             #- add('user-unsubscribed-variant', Remp\MailerModule\Hermes\NotifyCrmSubscribeUnsubscribeHandler())
+            #- add('mailgun-event', Remp\MailerModule\Hermes\ValidateCrmEmailHandler(@crmClient()))
 
     #crmClient:
     #    factory: Remp\MailerModule\Models\Crm\Client(%crm.addr%, %crm.api_token%)
