Specify explicit packageManager definition into package.json files
This is to Yarn v3 to stop complaining about outdated lockfile.

remp/remp#1294

--- a/Beam/package.json
+++ b/Beam/package.json
@@ -34,6 +34,7 @@
         "npm": ">=9",
         "yarn": ">2"
     },
+    "packageManager": "yarn@2.4.3",
     "dependencies": {
         "remp-beam": "file:extensions/beam-module"
     },
