--- a/Beam/extensions/beam-module/package.json
+++ b/Beam/extensions/beam-module/package.json
@@ -34,8 +34,10 @@
     },
     "engines": {
         "node": ">=18",
-        "npm": ">=9"
+        "npm": ">=9",
+        "yarn": ">=2"
     },
+    "packageManager": "yarn@2.4.3",
     "dependencies": {
         "@babel/core": "^7.0",
         "@remp/js-commons": "^1.3",
