--- a/Package/remp/package.json
+++ b/Package/remp/package.json
@@ -4,8 +4,11 @@
   "author": "REMP",
   "license": "MIT",
   "engines": {
-    "node": ">=18"
+    "node": ">=18",
+    "npm": ">=9",
+    "yarn": ">=2"
   },
+  "packageManager": "yarn@2.4.3",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/remp2020/js-commons.git"
