--- a/Sso/package.json
+++ b/Sso/package.json
@@ -14,6 +14,7 @@
         "npm": ">=9",
         "yarn": ">=2"
     },
+    "packageManager": "yarn@2.4.3",
     "dependencies": {
         "@remp/js-commons": "^1.3",
         "animate.css": "^3.7.2",
