Add article cover image gender balance info
- Add gender identification in article cover image.

- Add gender balance info to article detail.

- Add `article.show.info` widget group placeholder.

remp/remp#1274

--- a/Beam/.env.example
+++ b/Beam/.env.example
@@ -217,3 +217,9 @@ GOOGLE_GA_VIEW_ID=
 
 # Temporarily disable property token filtering for debugging
 DISABLE_TOKEN_FILTERING=
+
+# Shows gender balance info in article detail and automatically analyzes the cover photo of upserted article
+GENDER_BALANCE_ENABLED=false
+
+AZURE_COMPUTER_VISION_ENDPOINT=
+AZURE_COMPUTER_VISION_API_KEY=
