--- a/Campaign/composer.json
+++ b/Campaign/composer.json
@@ -20,6 +20,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "ext-intl": "*",
         "ext-json": "*",
         "cache/predis-adapter": "^1.0",
         "doctrine/dbal": "^3.1",
