Make link to Twitter from parsed embeds configurable
remp/novydenik#1141

--- a/Mailer/app/config/config.local.neon.example
+++ b/Mailer/app/config/config.local.neon.example
@@ -29,6 +29,7 @@ services:
     embedParser:
         setup:
             - setVideoLinkText("Click to play video")
+            - setTwitterLinkText("Click to display on X (Twitter)")
     articleLocker:
         setup:
             - setLockText("Exclusive content")
