Add phpredis support

--- a/Campaign/.env.example
+++ b/Campaign/.env.example
@@ -72,6 +72,7 @@ DB_PORT=3306
 
 # Redis client to be used. Available values are:
 # - predis: default value, used if nothing is set
+# - phpredis: use if you have installed the php-redis extension for better performance
 # - mock: fake implementation for tests
 # It's recommended to set this variable only for testing scenarios.
 # REDIS_CLIENT=
