--- a/Campaign/composer.json
+++ b/Campaign/composer.json
@@ -23,6 +23,7 @@
         "ext-intl": "*",
         "ext-json": "*",
         "cache/predis-adapter": "^1.0",
+        "cache/redis-adapter": "^1.2",
         "doctrine/dbal": "^3.1",
         "fico7489/laravel-pivot": "^3.0",
         "fideloper/proxy": "^4.4",
