--- a/Campaign/composer.json
+++ b/Campaign/composer.json
@@ -63,6 +63,9 @@
         "phpunit/phpunit": "^9.3.3",
         "squizlabs/php_codesniffer": "^3.6"
     },
+    "suggest": {
+        "ext-redis": "The extension required for better performance."
+    },
     "autoload": {
         "classmap": [
             "database"
