Add REDIS_PARAMETER_LIMIT env variable
The configuration option is to avoid errors when calling
Redis functions with large arrays. Redis has a hard limit
of 1024*1024 and it's not possible to for example sadd
more elements in one call than this.

remp/remp#1307

--- a/Campaign/.env.example
+++ b/Campaign/.env.example
@@ -117,6 +117,9 @@ REDIS_PERSISTENT=false
 # Redis queue database used for Laravel queue system if QUEUE_DRIVER is "redis". Defaults to 3.
 #REDIS_QUEUE_DATABASE=
 
+# Maximum number of elements in an array sent to Redis in one call (see https://github.com/redis/redis/issues/5535)
+#REDIS_PARAMETER_LIMIT=1000000
+
 #####################
 ## SSO configuration
 
